many changes from Amanda

--- a/app/en/contest-details.html
+++ b/app/en/contest-details.html
@@ -49,7 +49,6 @@
           <!--mob menu-->
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <a href="../en/">HOME</a>
-          <a href="http://naturesbestphotography.asia/news">NEWS</a>
           <a href="../en/contest-details.html">CONTEST DETAILS</a>
           <li><a href="https://naturesbestphotography.asia/user/entry/entry?lang=en">ENTER</a></li>
           <a href="../en/judges.html">JUDGES</a>
@@ -82,7 +81,6 @@
 
           <ul class="nav navbar-nav">
             <li><a href="../en/">HOME</a></li>
-            <li><a href="https://news.naturesbestphotography.asia/news">NEWS</a></li>
             <li><a href="../en/contest-details.html">CONTEST DETAILS</a></li>
             <li><a href="https://naturesbestphotography.asia/user/entry/entry?lang=en">ENTER</a></li>
             <li><a href="../en/judges.html">JUDGES</a></li>
@@ -118,7 +116,7 @@
         <div class="col-md-10 col-md-offset-1">
           <div class="col-md-12">
             <h2><img class="detail_title_img" src="../../assets/images/details__title_en.png" alt="call for entries"></h2>
-            <p class="subtitle">contest is open from <br> february 1, 2020 to april 30, 2020</p>
+            <p class="subtitle">Contest Is Closed</p>
             <h3>nature’s best photography asia awards guidelines</h3>
             <p><b>Nature’s Best Photography Asia</b> invites all photographers to enter our sixth annual AWARDS COMPETITION specific to images taken in Asia, by photographers residing anywhere in the world. See map and country descriptions below to make
               sure your photographs are eligible. A selection of Winners from Nature’s Best Photography Asia will be displayed within the Nature’s Best Photography Annual exhibition at the Wonders of Wildlife National Museum and Aquarium
@@ -129,7 +127,7 @@
             <table class="table">
               <tr>
                 <td class="title">CONTEST ENTRY PERIOD</td>
-                <td>February 1, 2020 − April 30, 2020</td>
+                <td>Next Contest 2021</td>
               </tr>
               <tr>
                 <td class="title">QUALIFICATIONS</td>
@@ -260,10 +258,10 @@
           <td class="title">EXHIBITION</td>
           <td>A selection of Nature’s Best Photography Asia Category Winning photographs will be displayed in the annual Awards Exhibition at the Wonders of Wildlife National Museum and Aquarium in Springfield, Missouri, USA.
         </tr>
-        <tr>
-          <td class="title">INVITAIONS</td>
+        <!--<tr>
+          <td class="title">INVITATIONS</td>
           <td>Nature’s Best Photography Asia winning photographers will be invited to the annual Awards Ceremony at the Wonders of Wildlife National Museum and Aquarium in Springfield, Missouri, USA. Travel expenses are not included.</td>
-        </tr>
+        </tr>-->
         <tr>
           <td class="title">ENTRY METHOD</td>
           <td>Enter Online</td>
