--- a/app/en/gallery/index.html
+++ b/app/en/gallery/index.html
@@ -77,10 +77,10 @@
                <li class="dropdown">
                   <a data-toggle="dropdown" href="#">WINNERS GALLERY<span class="caret"></span></a></a>
                   <ul class="dropdown-menu">
-                    <li><a href="../en/gallery/index.html">2020 Gallery</a></li>
-                    <li><a href="../en/gallery/gallery-2019.html">2019 Gallery</a></li>
-                    <li><a href="../en/gallery/gallery-2018.html">2018 Gallery</a></li>
-                    <li><a href="../en/gallery/gallery-2017.html">2017 Gallery</a></li>
+                    <li><a href="../../en/gallery/index.html">2020 Gallery</a></li>
+                    <li><a href="../../en/gallery/gallery-2019.html">2019 Gallery</a></li>
+                    <li><a href="../../en/gallery/gallery-2018.html">2018 Gallery</a></li>
+                    <li><a href="../../en/gallery/gallery-2017.html">2017 Gallery</a></li>
                   </ul>
                 </li>
                <li class="dropdown">
@@ -102,17 +102,16 @@
 
                <ul class="nav navbar-nav">
                   <li><a href="../">HOME</a></li>
-                  <li><a href="https://news.naturesbestphotography.asia/news">NEWS</a></li>
                   <li><a href="../contest-details.html">CONTEST DETAILS</a></li>
                   <li><a href="https://naturesbestphotography.asia/user/entry/entry?lang=en">ENTER</a></li>
                   <li><a href="../judges.html">JUDGES</a></li>
                   <li class="dropdown">
                      <a data-toggle="dropdown" href="#">WINNERS GALLERY<span class="caret"></span></a></a>
                      <ul class="dropdown-menu">
-                       <li><a href="../en/gallery/index.html">2020 Gallery</a></li>
-                       <li><a href="../en/gallery/gallery-2019.html">2019 Gallery</a></li>
-                       <li><a href="../en/gallery/gallery-2018.html">2018 Gallery</a></li>
-                       <li><a href="../en/gallery/gallery-2017.html">2017 Gallery</a></li>
+                       <li><a href="../../en/gallery/index.html">2020 Gallery</a></li>
+                       <li><a href="../../en/gallery/gallery-2019.html">2019 Gallery</a></li>
+                       <li><a href="../../en/gallery/gallery-2018.html">2018 Gallery</a></li>
+                       <li><a href="../../en/gallery/gallery-2017.html">2017 Gallery</a></li>
                      </ul>
                    </li>
                   <li class="dropdown">
