--- a/app/en/judges.html
+++ b/app/en/judges.html
@@ -48,7 +48,6 @@
           <!--mob menu-->
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <a href="../en/">HOME</a>
-          <a href="http://naturesbestphotography.asia/news">NEWS</a>
           <a href="../en/contest-details.html">CONTEST DETAILS</a>
           <li><a href="https://naturesbestphotography.asia/user/entry/entry?lang=en">ENTER</a></li>
           <a href="../en/judges.html">JUDGES</a>
@@ -81,7 +80,6 @@
 
           <ul class="nav navbar-nav">
             <li><a href="../en/">HOME</a></li>
-            <li><a href="https://news.naturesbestphotography.asia/news">NEWS</a></li>
             <li><a href="../en/contest-details.html">CONTEST DETAILS</a></li>
             <li><a href="https://naturesbestphotography.asia/user/entry/entry?lang=en">ENTER</a></li>
             <li><a href="../en/judges.html">JUDGES</a></li>
@@ -121,9 +119,9 @@
             <div class="col-md-12 mobp0">
               <h2><img src="../../assets/images/judges__title_en.png" alt="judges"></h2>
               <h3 class="subtitle">Meet The Judges<br>Nature’s Best Photography Asia 2020</h3>
-              <p class="text-justify">The competition opens on February 1st, 2020 and all image entries are judged by a panel of experts in the fields of photography, science, and conservation. Photographers whose images move into the final round of judging will be emailed and
+              <p class="text-justify">All image entries are judged by a panel of experts in the fields of photography, science and conservation. Photographers whose images move into the final round of judging will be emailed and
                 requested to send high-resolution images or RAW files, and detailed captions. Representatives from Nature’s Best Photography Asia will email all entrants to announce the finalists. Each photograph is judged on technical quality, originality,
-                and artistic merit. Get yourbest ready!</p>
+                and artistic merit. Get your best ready!</p>
             </div>
 
 
@@ -135,8 +133,7 @@
                       <div class="row"> <img src="../../assets/images/judges/img__stephen-freligh.jpg" alt="Steve Freligh" class="img-responsive mlrauto">
                       </div>
                       <h4>Steve Freligh</h4>
-                      <p>With more than 30 years of experience in photography, Stephen Freligh is Co-Publisher of Nature’s Best Photography magazine. In addition, Freligh is Executive Director of the annual Nature’s Best Photography Windland Smith Rice International
-                        Awards run in exhibition alliance with the Wonders of Wildlife National Museum and Aquarium in Springfield, Missouri, USA.</p>
+                      <p>With more than 30 years of experience in photography, Stephen Freligh is Co-Publisher of Nature’s Best Photography magazine. In addition, Freligh is Executive Director of the annual Nature’s Best Photography contest run in exhibition alliance with the Wonders of Wildlife National Museum and Aquarium in Springfield, Missouri, USA.</p>
                     </div>
                   </div>
 
