--- a/app/en/index.html
+++ b/app/en/index.html
@@ -88,7 +88,6 @@
           <!--mob menu-->
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <a href="../en/">HOME</a>
-          <a href="http://naturesbestphotography.asia/news">NEWS</a>
           <a href="../en/contest-details.html">CONTEST DETAILS</a>
           <li><a href="https://naturesbestphotography.asia/user/entry/entry?lang=en">ENTER</a></li>
           <a href="../en/judges.html">JUDGES</a>
@@ -121,7 +120,6 @@
 
           <ul class="nav navbar-nav">
             <li><a href="../en/">HOME</a></li>
-            <li><a href="https://news.naturesbestphotography.asia/news">NEWS</a></li>
             <li><a href="../en/contest-details.html">CONTEST DETAILS</a></li>
             <li><a href="https://naturesbestphotography.asia/user/entry/entry?lang=en">ENTER</a></li>
             <li><a href="../en/judges.html">JUDGES</a></li>
@@ -211,7 +209,7 @@
               </br>
               <b>Category Winners:</b> Award plaque, photo displayed at the Wonders of Wildlife National Museum and displayed in Nature's Best Photography magazine.</br>
               </br>
-              <b>Category Highly Honored:</b> All images and videos will be displayed in winner's gallery on our website. Some images may be chosen to be on display at Wonders of Wildlife National Museum. (Five highly honored from each category)</br>
+              <b>Category Highly Honored:</b> All images and videos will be displayed in winner's gallery on our website. Some images may be chosen to be on display at Wonders of Wildlife National Museum.</br>
               </br>
               <b>Award Ceremony:</b> All winners are invited to the award ceremony in the United States. (Travel expenses are not included and are to be borne by the winner)</br>
               </br>
