Yan location change

--- a/app/en/gallery/index.html
+++ b/app/en/gallery/index.html
@@ -1075,7 +1075,7 @@
                         <div class="photo-title">Himalayan Vulture</div>
                         <div class="photo-location">Gansu, China</div>
                         <div class="photographer-name">Jiang Yan</div>
-                        <div class="photographer-location">Beijing, China</div>
+                        <div class="photographer-location">Shanghai, China</div>
                         <!-- <a href="https://www.instagram.com/faisalalnomas/" class="myButton2">Photographer's Website</a> -->
                      </div>
                      <span class="product-description text-justify"><span class="story-span">Story:</span> Every year, I like to go to Zecha, Gannan, Gansu Province to see Himalayan Vultures, which is an ancient species. It was extremely cold that day and there was no sunshine at the top of the mountain. But when the sun suddenly appeared, a Himalayan Vulture abruptly flew away from its companion, and uttered a low "hiss, hiss" sad calls towards the opposite cliff and the rolling mountains in the distance. At that moment, I felt the tenaciousness of life from this roar.</span>
