--- a/app/en/judges.html
+++ b/app/en/judges.html
@@ -118,10 +118,8 @@
           <div class="col-md-12 mobp0">
             <div class="col-md-12 mobp0">
               <h2><img src="../../assets/images/judges__title_en.png" alt="judges"></h2>
-              <h3 class="subtitle">Meet The Judges<br>Nature’s Best Photography Asia 2020</h3>
-              <p class="text-justify">All image entries are judged by a panel of experts in the fields of photography, science and conservation. Photographers whose images move into the final round of judging will be emailed and
-                requested to send high-resolution images or RAW files, and detailed captions. Representatives from Nature’s Best Photography Asia will email all entrants to announce the finalists. Each photograph is judged on technical quality, originality,
-                and artistic merit. Get your best ready!</p>
+              <h3 class="subtitle">Meet The Judges<br>Nature’s Best Photography Asia</h3>
+              <p class="text-justify">All image entries are judged by a panel of experts in the fields of photography, science and conservation. Photographers whose images move into the final round of judging will be emailed and requested to send high-resolution images or RAW files, and detailed captions. Representatives from Nature’s Best Photography Asia will email all entrants to announce the finalists. Each photograph is judged on technical quality, originality, and artistic merit. Get your best ready!</p>
             </div>
 
 
@@ -145,8 +143,7 @@
                       <div class="row">
                         <img src="../../assets/images/judges/img__charles-veatch.jpg" alt="Charles Veatch" class="img-responsive mlrauto"></div>
                       <h4>Charles Veatch</h4>
-                      <p>Director and Past Chairman of the Board, Shenandoah University, Charles Veatch is also Chairman of Nature’s Best Photography and a leader in Reston, Virginia community support. Published photographer and commercial real estate developer,
-                        Veatch is also a judge for the Nature’s Best Photography Awards program.</p>
+                      <p>Director and Past Chairman of the Board, Shenandoah University, Charles Veatch is also Chairman of Nature’s Best Photography and a leader in Reston, Virginia community support. Published photographer and commercial real estate developer, Veatch is also a judge for the Nature’s Best Photography Awards program.</p>
 
                     </div>
 
@@ -158,8 +155,7 @@
                       <div class="row">
                         <img src="../../assets/images/judges/img__deborah-freligh.jpg" alt="Deborah Freligh" class="img-responsive mlrauto"></div>
                       <h4>Deborah Freligh</h4>
-                      <p>Award-winning Art Director and Co-Publisher of Nature’s Best Photography magazine, Deborah Freligh has led design projects for National Geographic, Discovery Channel, Eastman Kodak, National Wildlife Federation, and the Smithsonian
-                        Institution.</p>
+                      <p>Award-winning Art Director and Co-Publisher of Nature’s Best Photography magazine, Deborah Freligh has led design projects for National Geographic, Discovery Channel, Eastman Kodak, National Wildlife Federation, and the Smithsonian Institution.</p>
 
                     </div>
 
