--- a/app/en/contest-details.html
+++ b/app/en/contest-details.html
@@ -118,9 +118,7 @@
             <h2><img class="detail_title_img" src="../../assets/images/details__title_en.png" alt="call for entries"></h2>
             <p class="subtitle">Contest Is Closed</p>
             <h3>nature’s best photography asia awards guidelines</h3>
-            <p><b>Nature’s Best Photography Asia</b> invites all photographers to enter our sixth annual AWARDS COMPETITION specific to images taken in Asia, by photographers residing anywhere in the world. See map and country descriptions below to make
-              sure your photographs are eligible. A selection of Winners from Nature’s Best Photography Asia will be displayed within the Nature’s Best Photography Annual exhibition at the Wonders of Wildlife National Museum and Aquarium
-              in Springfield, Missouri, USA and viewed by up to two million people.</p>
+            <p><b>Nature’s Best Photography Asia</b> invites all photographers to enter our annual AWARDS COMPETITION specific to images taken in Asia, by photographers residing anywhere in the world. See map and country descriptions below to make sure your photographs are eligible. A selection of Winners from Nature’s Best Photography Asia will be displayed within the Nature’s Best Photography Annual exhibition at the Wonders of Wildlife National Museum and Aquarium in Springfield, Missouri, USA and viewed by up to two million people.</p>
           </div>
 
           <div class="col-md-12 contest-details-country-table">
