--- a/app/ja/index.html
+++ b/app/ja/index.html
@@ -33,6 +33,7 @@
   <link href="jquery.mb.YTPlayer.min.css" media="all" rel="stylesheet" type="text/css">
   <script type="text/javascript" src="../../assets/scripts/script.js"></script>
   <link rel="stylesheet" type="text/css" href="../../assets/styles/style2.css" media="all">
+  <link rel="stylesheet" type="text/css" href="../../assets/styles/new.css" media="all">
 </head>
 
 <body data-spy="scroll" data-target=".onpage-navigation" data-offset="150">
@@ -126,8 +127,12 @@
       </div>
     </header>
 
-    <div class="top-hero">
+    <!-- <div class="top-hero">
       <div id="randomImage"><a href="../ja/gallery/index.html"></a></div>
+    </div> -->
+    <div class="hero-top">
+      <img class="img-responsive" src="../../assets/images/hero-top.jpg" alt="">
+      <div class="hero-overlay">Nature's Best Photography Asia 2021</br>Nature Photo Contest<br>Starting Soon</div>
     </div>
 
   </div>
@@ -196,7 +201,7 @@
           <h2>賞</h2>
           <p><b>グランプリ : </b>1名　賞金$1,000USD 、授賞楯、米国ワンダー オブ ワイルドライフ博物館に年間展示およびネイチャーズベストマガジン掲載。</br>
             </br>
-            <b>部門最優秀賞：</b> 7名（各部門1名）授賞楯、米国ワンダー オブ ワイルドライフ博物館に年間展示およびネイチャーズベストマガジン掲載。</br>
+            <b>部門最優秀賞：</b> 7名（各部門1名）米国ワンダー オブ ワイルドライフ博物館に年間展示およびネイチャーズベストマガジン掲載。</br>
             </br>
             <b>優秀賞：</b> 各部門5名　優秀賞から選ばれた数点は、米国ワンダー オブ ワイルドライフ博物館に年間展示。すべての優秀賞作品はネイチャーズベスト フォトグラフィー アジア
             ホームページギャラリー掲載。</br>
