--- a/app/en/index.html
+++ b/app/en/index.html
@@ -1,40 +1,32 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <meta charset="UTF-8">
-  <meta charset="utf-8">
-  <meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=1.0, maximum-scale=1">
-  <title>Nature's Best Photography Asia</title>
-  <meta name="description" content="Your nature photo displayed in the worlds most visited museum. Enter your photo in the world’s most prestigious nature photo contest.">
-  <link rel="alternate" href="http://naturesbestphotography.asia/ja/" hreflang="ja">
-  <link rel="alternate" href="http://naturesbestphotography.asia/en/" hreflang="en">
-  <meta name="keywords" content="nature,photography,asia,contest">
-  <meta name="author" content="Nature's Best Photography Asia">
-  <link rel="stylesheet" type="text/css" href="../../assets/styles/main.css?1455274908" media="all">
-  <link rel="stylesheet" type="text/css" href="../../assets/styles/new.css" media="all">
-  <link rel="stylesheet" type="text/css" href="../../assets/styles/style2.css" media="all">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Nature's Best Photography Asia</title>
+    <meta name="description" content="Sample text">
+    <link rel="alternate" href="http://naturesbestphotography.asia/ja/judges.html" hreflang="ja">
+    <link rel="alternate" href="http://naturesbestphotography.asia/en/judges.html" hreflang="en">
+    <meta name="keywords" content="nature,photography,asia,contest,Smithsonian’s National Museum">
+    <meta name="author" content="Nature's Best Photography Asia">
+    <link rel="stylesheet" type="text/css" href="../../assets/styles/main.css?1454032337" media="all">
   
-  <!--bootstrap cdn-->
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-  <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-  <!-- Latest compiled JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-  <!-- youtube script -->
-  <script src="jquery.mb.YTPlayer.js"></script>
-  <link href="jquery.mb.YTPlayer.min.css" media="all" rel="stylesheet" type="text/css">
-  <script type="text/javascript" src="../../assets/scripts/script.js"></script>
+    <!--bootstrap cdn-->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   
-
-  <!-- Colorbox -->
-  <link rel="stylesheet" href="https://cdn.rawgit.com/jackmoore/colorbox/master/example1/colorbox.css">
-</head>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="../../assets/scripts/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../assets/styles/style2.css" media="all">
+  
+  </head>
 
 <body data-spy="scroll" data-target=".onpage-navigation" data-offset="150">
 
