--- a/app/en/index.html
+++ b/app/en/index.html
@@ -170,7 +170,7 @@
             <h2>Awards</h2>
             <p><b>Grand Prize:</b> USD $1,000, award plaque, photo displayed at the Wonders of Wildlife National Museum and in Nature's Best Photography magazine.</br>
               </br>
-              <b>Category Winners:</b> Photo displayed at the Wonders of Wildlife National Museum and in Nature's Best Photography magazine.</br>
+              <b>Category Winners:</b> Award certificate, photo displayed at the Wonders of Wildlife National Museum and in Nature's Best Photography magazine.</br>
               </br>
               <b>Category Highly Honored:</b> All images and videos will be displayed in winner's gallery on our website. Some images may be chosen to be on display at Wonders of Wildlife National Museum.</br>
               </br>
