changes to gallery

--- a/app/en/gallery/gallery-2015.html
+++ b/app/en/gallery/gallery-2015.html
@@ -11,7 +11,7 @@
   <link rel="alternate" href="http://naturesbestphotography.asia/en/gallery/gallery-2015.html" hreflang="en">
   <meta name="keywords" content="nature,photography,asia,contest,Smithsonian’s National Museum">
   <meta name="author" content="Nature's Best Photography Asia">
-  <link rel="stylesheet" type="text/css" href="/assets/styles/main.css?1454032337" media="all">
+  <link rel="stylesheet" type="text/css" href="../../..//assets/styles/main.css?1454032337" media="all">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
       <div id="wildlife1" class="gallery__item__block">
         <div class="inner-container">
           <div class="gallery__item__block_main">
-            <div class="gallery__item__block_main__img"><img src="/assets/images/gallery/gallery__wildlife_1.jpg" alt="Eye to eye, with the future  of a troubled species."></div>
+            <div class="gallery__item__block_main__img"><img src="../../../assets/images/gallery/gallery__wildlife_1.jpg" alt="Eye to eye, with the future  of a troubled species."></div>
             <div class="gallery__item__block_main__title">
               <h4>Eye to eye, with the future of a troubled species.</h4>
             </div>
